# harness0

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.cursor/rules/: harness0-coding-standards.mdc  harness0-project-context.mdc
docs/: USER_MANUAL.md  architecture.md  competitive-analysis.md  growth-strategy.md  project-vision.md
src/harness0/: __init__.py  engine.py
src/harness0/context/: __init__.py  assembler.py  layers.py  sources.py
src/harness0/core/: __init__.py  config.py  types.py
src/harness0/entropy/: __init__.py  gardener.py  manager.py
src/harness0/feedback/: __init__.py  signals.py  translator.py
src/harness0/security/: __init__.py  approval.py  command_guard.py  sandbox.py
src/harness0/tools/: __init__.py  interceptor.py  registry.py  schema.py
tests/: conftest.py  test_config.py  test_context.py  test_core_types.py  test_engine.py  test_entropy.py  test_feedback.py  test_security.py  test_tools_interceptor.py  test_tools_schema_registry.py
